--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -23,6 +23,13 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+
+   <dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>23.5-jre</version> <!-- or 23.5-android for the Android flavor -->
+   </dependency>
+
   </dependencies>
 
   <build>
