--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -25,10 +25,16 @@
     </dependency>
 
    <dependency>
-    <groupId>com.google.guava</groupId>
-    <artifactId>guava</artifactId>
-    <version>23.5-jre</version> <!-- or 23.5-android for the Android flavor -->
+     <groupId>com.google.guava</groupId>
+     <artifactId>guava</artifactId>
+     <version>23.5-jre</version>
    </dependency>
+
+   <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
 
   </dependencies>
 
