--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -42,6 +42,11 @@
       <version>1.9.59</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-translate</artifactId>
+      <version>1.70.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -54,7 +59,7 @@
         <version>2.2.0</version>
         <configuration>
           <!-- TODO: set project ID. -->
-          <deploy.projectId>plockett-step-2020</deploy.projectId>
+          <deploy.projectId>plockett-step-intern-2020</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
       </plugin>
